--- a/theme.css
+++ b/theme.css
@@ -510,7 +510,7 @@ footer h2 {
 	font-weight: 700;
 	letter-spacing: 1.12px;
 	line-height: 20px;
-	margin: 10px 0;
+	margin: 0 0 10px 0;
 	text-transform: uppercase;
 }
 footer h3 {
